@@ -6,15 +6,15 @@ DIST Search-Xapian-1.2.12.0.tar.gz 62289 SHA256 9bc0cb0b8d41f7160c29c9d774e16293
 DIST Search-Xapian-1.2.8.0.tar.gz 61945 SHA256 73b4b1bb8cbba850cf7337cc7aa0fd7c9bdf2827293591d793693a4e07f27f90 SHA512 bc34d41aca3c7541f273d64ec47b19d150c92d00c906fd6ee8ddc2031bf8928d3bde50f0429377c8e429faa44b9db623f032a9e30f9b61814e27896e752c0b42 WHIRLPOOL 09e1211d257cb1018fd27bb7cf8d05ae942bad29242730003fdfcb671072f32915522a4bea812b041d5e7664e447b47523dda548905735872193fe372c61cac1
 DIST Search-Xapian-1.2.9.0.tar.gz 62103 SHA256 9d608cd4afabe24323cffa1a96526fd0adcd99a5ed7c07a6845abcdb854f9485 SHA512 559f89810198d49b1641aba76e01fdf173f695810dcd2204e41b45c3b2d336e16068435bfddbaa9b5dba17f9e67ed340ac8fc807256c86881ef72def8cc7bae9 WHIRLPOOL 215290f7479742349ca75274c0e68b30f891bf1c2b4bdf55e402904ea51d562155c0d7c331b3ce24bbb82aa5a1f17a3ba6e2eedd7d2fd6a1fb27c1bbe6f607c2
 EBUILD Search-Xapian-1.2.10.0.ebuild 751 SHA256 9b2fe2500e4a49beb7b3c344355a7f04c89b3619fbf876daf8cb1088fb8f904c SHA512 90e6c9e0026c41a686587d0dbe26877ba5d3b8ed07fed26011c3322ea544827a7f2bd1c4db71dc20b3de9bc438d49061e7f6e16572e01fbd371f2cfb56d551bc WHIRLPOOL 41a4c7f6f3d0d370f68128d97b1fe7ce430674bde13e3f92f7791d699afbc3b876d0db594c4274df824e728103b4a2ef630f65a7e65c819d9ded2e6ad80c434a
-EBUILD Search-Xapian-1.2.12.0.ebuild 884 SHA256 35587523428a8976204805d6278a918c8d2c550b44fc7a82b75c5850f83b3b53 SHA512 22463191338aedc5b38052dc1f69dc45646a03a3c3a1d89f1f1030476a00a4715560029dd23a18511284b77d6bb8249dc38464239c3d0ead505cacab6875253c WHIRLPOOL 015d06a4ef4d896cbbb8aeaa1406511efbd0544509966f836e186b53c062302d643b963360af4b3bd7a9e6eaad592e56a38840a4438cb7215d2c907ac3a17363
+EBUILD Search-Xapian-1.2.12.0.ebuild 895 SHA256 99b04a904efa969d725e03375df2314928b55c52bf1bf622290d7ec692ce94e9 SHA512 ab7d88b94399205cf94f5cc7916514881384ae1cb6dece087a271127ff40e85181b0cdcc75b5a7e63bfd25f8d8e0987de33f487d61f8e5208e7ff42a086af764 WHIRLPOOL 0c894cb39dbb0c90875d8962484337e1b942a76ac2c253116b2f296a0bd41a3c60d832f165e924c490473a89fa9191be39a427430a858731fbfd4607f6eaafef
 EBUILD Search-Xapian-1.2.8.ebuild 769 SHA256 e45affe0c2284cb954821823019201d56fe5123cb0ef6d8363ebcd77c38fe62b SHA512 ef5a805807de1cf5b8298201b343810311a8f68f68586dc10c5d61bc31edfb1ed7bc7f9cf7f759b129444444b4801532c04c7af603833aa376a5ae2b5f04ba22 WHIRLPOOL 8afc9e896de63517aa8baa2fbe64fc0cc4ad1ac2e2cf70351a13efbeb6cc7acc3164ef392aef0494b43f5f0988a03186e5f60c3e19ef98e5cedaccd88436e3e1
 EBUILD Search-Xapian-1.2.9.ebuild 771 SHA256 cba34e4f0000fbfaeb1865c7a8105a44c761f011b987828ae5e79cfd5447d0dc SHA512 506088ce8d05ed79e09304a35b67ea3eb0c6dd59b4c9d2b41863e5c9e4baad332a4539a0a3905e0233cbc85cb502bfc513dcc146d433c1e6e2c27796aed4f96c WHIRLPOOL 5e7c6b4df3ad581e698fac3f4cb5c830939926d190e11c70982529531273943e6755ec2d20674fa4a515e5442e121aba13ec2eee7bd042f3dfb892ea2ce994bc
-MISC ChangeLog 1862 SHA256 eb975aae2f43ea4c20a75cb26a6777a2ecaef0eca408d163f9a2c7cc3e2e6ec3 SHA512 d57f01124a1ceba5f942b7b0cb80cc5b044a641c0c540143b79353026c0a4b2d1b97d2ece031195925f17d6f16c47ef8b8b3e5166c756e5f1196e245717a2330 WHIRLPOOL 1120f29922486f5c32ce2746879fc68f27204a6f185e9d751b4fc414dbf1f634046aa943c3457ac84c03b1f82551125927eee9b66206d11026047ceb68866490
+MISC ChangeLog 2071 SHA256 f71091e0f16e3445db4bcd2d233d6d9a2d6dd3587078e3cc2d3c72de600eb695 SHA512 ff7c1c1cd0301ca4e4018a168adfda59ce6436587bf363343b1116b65ef562f50da3427b3ac0a9258026aabed4b698bfb7661a60aada688c159359919f2543da WHIRLPOOL ee291dc46d107a7aa838bccfe1792e6d5eeed313dadf32288c75c2357bb0437c302633f594ee60442f5a54f10ef53c418363bbd87f27bcbc0a6cf2c66def19e0
 MISC metadata.xml 4012 SHA256 ae90211e6d211f8999619bbbd4448475469bc3972f8c9fff5233f5f67ae585a1 SHA512 80bdaacb65c220666597014f6b90e720a4542590c4f704b7dc36bab04af7b7e977eed3e70f0d007626a206d60251f79a2feada280483a3c2fd0e94bdd90e1561 WHIRLPOOL 6245403dba91bc74628f5e442d416206808843c9ca44bcab5297f36b2d2fba440861afac1c334f1b7671787bde2877deb3cde028ec7785a8f487bb905f738254
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlAFdKIACgkQl5yvQNBFVTUu/ACeKqdyM9g+yrA7DzkoSNDpNiNX
-yKcAoJcGRXf4TD84IanqoF/N/Byu3esV
-=chfv
+iEYEAREIAAYFAlAGhjEACgkQl5yvQNBFVTVIxwCePt7rbciinMvVqNfoKRfPR1sx
+K2sAoI30gMTg3quYnwTFPGViBSR+t7yD
+=x2uk
 -----END PGP SIGNATURE-----
