@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Search-Xapian/Search-Xapian-1.2.12.0.ebuild,v 1.2 2012/07/17 14:20:07 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Search-Xapian/Search-Xapian-1.2.12.0.ebuild,v 1.3 2012/07/18 09:47:18 blueness Exp $
 
 EAPI="3"
 
@@ -14,7 +14,7 @@ DESCRIPTION="Perl XS frontend to the Xapian C++ search library."
 
 LICENSE="|| ( Artistic GPL-1 GPL-2 GPL-3 )"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~ppc64 ~x86"
+KEYWORDS="~amd64 ~arm ~mips ~ppc ~ppc64 ~x86"
 IUSE="examples"
 
 RDEPEND=">=dev-libs/xapian-1.2.9
