@@ -1,15 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST Switch-2.16-rt60380.patch 577 RMD160 06e99d2c52fc906a600c652d5d2ecd4560c723ea SHA1 4b420d9488d775d40ff3a78aba4389a6234ef8fe SHA256 7a60421267c6ab17463dda884fe46b3a2ccdc3e65d864bcb06f5577fddb63e76
-DIST Switch-2.16.tar.gz 13185 RMD160 0b93b8ecea9d2e83d757e95fb4056d6b706b1f60 SHA1 2737a2b5e64a9d715528fa50a8d967710106220e SHA256 308c8f27f295906778186f14c6291923905730b46ba879c3a68fff81c37df9d8
-EBUILD Switch-2.160.0.ebuild 532 RMD160 7213ddcf0e3302faee50f1f6d4560c8593dc2978 SHA1 c6d91bee15b638b15409cbd5079a27f24b7e7cff SHA256 9e13acab37ef4109b558d3206525966b787b6df1c9272766cef8109fe492f644
-MISC ChangeLog 552 RMD160 e25a0a555edb8e986c2633bc74c912fe57b48afa SHA1 326a596b2f14e649ea6226a9052f5aa2ad61b400 SHA256 0ea41efd6709a2895cbdabd73dfa9f245c71009e942b39d5414a3e330241dbf8
-MISC metadata.xml 278 RMD160 217e52350155ad88d9d81ecff7d109228524a6cb SHA1 c0fae71c85af85f7c2a9dc3d541c3b9b3c6fc0f0 SHA256 5a76d11ba6aab0133fee5cf164aaaafc372e148ce1c4c552ac323b94248d6d48
+DIST Switch-2.16-rt60380.patch 577 SHA256 7a60421267c6ab17463dda884fe46b3a2ccdc3e65d864bcb06f5577fddb63e76 SHA512 a67fcf396744bc268c31df543da32c7ee0a78455ce3c430b84bcc1c3feea0ee1cc934a52f67d701a60358dac297c3182a09478b65daf3b898715141da1a57713 WHIRLPOOL fad351d9321f4e04387a858c087b84f8541595ec239518642b6f44422f9f997b8d9e716c89876c7c095b8bff90008cc8e8989e74d837df380f8adf6c12cd88f1
+DIST Switch-2.16.tar.gz 13185 SHA256 308c8f27f295906778186f14c6291923905730b46ba879c3a68fff81c37df9d8 SHA512 614916c3b813c5cc279e592778d24b4213218acbb94fb842b99969475d356f44f451d0ad7fd18b28899a38bdb070e491d32e22c7ee87bc45668606b9cb413f88 WHIRLPOOL dcbdf7f8abde45a8ca39519cf5878c7d3d481653aa3efa239828ca55fe7584816f4c0f479577bd18007327dbacf6cad84efde1a3a0f28644a3514e08b1f608eb
+EBUILD Switch-2.160.0.ebuild 536 SHA256 cbfca68d7ac933a3e9025008ed9794fb3fab10787174fe621859e2f75b5de9a2 SHA512 01037c815b0c62dfd7becaade536c15c88c408a0d3c0969b921af1c212ef8e6b4bb7a097ccd641ad1bd491df1685fba29668ac95cdd25fb3ba3c4937fa22340c WHIRLPOOL 7d4b7e666adba8266cdd9c6541121dca27cfc39045713386eb2731f4353f08a6e3c3b1288bd15ca675ff561ed072b1176e7bacb77822368772cbf433345d320e
+MISC ChangeLog 659 SHA256 c987c81f5357f739767fa0c87b844f1a03e948cd734dd08d4bb038e45f691de2 SHA512 d09a55de22621b5ae57de5b35d08be977d2a58b34a7923b17aa6cb598749fe5e5fce3b3d30d5f1fe2918c170bdb23fc740c0e8dfb732bd0b7685b36c85509908 WHIRLPOOL f3c5617ff4ab6c5fee49447050a01731292f84c06a0281359556498ee63766cffbcb19d55878b034d5f6ce7493138541360e382f5ecbb53b147287eb2e11df7c
+MISC metadata.xml 278 SHA256 5a76d11ba6aab0133fee5cf164aaaafc372e148ce1c4c552ac323b94248d6d48 SHA512 af34b8d6273129ebcf1a035e12ae41ac4a5e3b045cd9f9102f49e5b5c05263af480be07e900d564ff4253264aff6a538358aff4252d2ea19e006d7ee102db15b WHIRLPOOL 4cc7fa9cd1b136cffd7cd98f3ebea0a5e094678fd967e63a366e361ef9b71b3095bd6b76da48e9167c32f199d4bee2d9ad52001da1713e1008f3a66a6f467f90
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAk/nNJwACgkQV3J2n04EauziIQCgtY537IWca6bbWtqQ55s+ql8+
-TAQAoISwXDhQ6SnXzY+i4FrITmCwvJE1
-=7ydU
+iF4EAREIAAYFAlAGUsMACgkQknrdDGLu8JDf1AD/dX87Tiy7/9W1uYBKqH3XMg3x
+zYYivm6GQEdUUtuXTAsA/i0zuWK8gMZo9+8VTvM3tn+EqE45zZToXMw3hqlp0Qju
+=BqRr
 -----END PGP SIGNATURE-----
