@@ -1,6 +1,9 @@
 # ChangeLog for perl-core/Switch
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Switch/ChangeLog,v 1.3 2012/06/24 15:39:05 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Switch/ChangeLog,v 1.4 2012/07/18 06:09:03 xmw Exp $
+
+  18 Jul 2012; Michael Weber <xmw@gentoo.org> Switch-2.160.0.ebuild:
+  Marking ~arm for www-client/netsurf
 
   24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
   Update CPAN upstream info
