@@ -1,6 +1,14 @@
 # ChangeLog for dev-perl/Search-Xapian
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Search-Xapian/ChangeLog,v 1.12 2012/07/17 14:20:07 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Search-Xapian/ChangeLog,v 1.13 2012/07/18 09:47:18 blueness Exp $
+
+  18 Jul 2012; Anthony G. Basile <blueness@gentoo.org>
+  Search-Xapian-1.2.12.0.ebuild:
+  Keyword ~arm
+
+  18 Jul 2012; Anthony G. Basile <blueness@gentoo.org>
+  Search-Xapian-1.2.12.0.ebuild:
+  Keyword ~mips
 
   17 Jul 2012; Anthony G. Basile <blueness@gentoo.org>
   Search-Xapian-1.2.12.0.ebuild:
